# email-bot

./: .gitignore  Cargo.toml  business_emails.json
src/: main.rs
templates/: email_template.html
