[package]
name = "email-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.10"
lettre_email = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
chrono = "0.4.33"
scraper = "0.18.1"
askama = "0.12.1"
fantoccini = "0.19.3"
thiserror = "1.0"
regex = "1.10.3"
